--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -23,5 +23,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Fix vite permission
+        run: chmod +x node_modules/.bin/vite
+
       - name: Build frontend
-        run: npx vite build
+        run: npm run build
